# Social-Pulse

./: .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  README.md  README_TR.md  package.json  pyproject.toml  start.sh  vercel.json
backend/: .env.example  app.py  init_db.sql  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts
frontend/src/components/: Accounts.tsx  Analytics.tsx  CompetitorAnalysis.tsx  Dashboard.tsx  Profile.tsx  Settings.tsx  Sidebar.tsx  TrendAnalysis.tsx
frontend/src/utils/: newsApiKey.ts
scripts/: vercel-build.sh
